[gd_scene load_steps=10 format=3 uid="uid://br7mdbs5gojpn"]

[ext_resource type="Script" path="res://Scripts/render_item.gd" id="1_gexwk"]
[ext_resource type="Script" path="res://Scripts/tool_tip_info.gd" id="2_je7lj"]
[ext_resource type="Script" path="res://Scripts/searching_label.gd" id="3_vfurs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omno7"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(1, 0.984314, 0.870588, 0.588235)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0, 0, 0, 0.870588)
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_ivyjm"]
font_color = Color(0.32549, 0.470588, 0.654902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vxkuw"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.898039, 0.521569, 0.54902, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wnug"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.964706, 0.768627, 0.729412, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_blf1k"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.741176, 0.317647, 0.427451, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l4h1q"]

[node name="RenderItem" type="HBoxContainer" node_paths=PackedStringArray("path", "option_button", "image_num", "searching_panel", "img_override", "anim_override", "search_label")]
size_flags_horizontal = 3
script = ExtResource("1_gexwk")
path = NodePath("PathLine")
option_button = NodePath("OptionButton")
image_num = NodePath("SpinBox")
searching_panel = NodePath("PathLine/PanelContainer")
img_override = NodePath("ImageOverride")
anim_override = NodePath("AnimOverride")
search_label = NodePath("PathLine/PanelContainer/SearchingLabel")

[node name="PathLine" type="LineEdit" parent="."]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "+"
placeholder_text = "File Path"
script = ExtResource("2_je7lj")

[node name="PanelContainer" type="PanelContainer" parent="PathLine"]
visible = false
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -115.0
offset_right = 5.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_omno7")

[node name="SearchingLabel" type="Label" parent="PathLine/PanelContainer"]
custom_minimum_size = Vector2(95, 0)
layout_mode = 2
text = "Reading"
label_settings = SubResource("LabelSettings_ivyjm")
vertical_alignment = 1
script = ExtResource("3_vfurs")

[node name="Timer" type="Timer" parent="PathLine/PanelContainer/SearchingLabel"]
wait_time = 0.5
autostart = true

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Animation"
popup/item_0/id = 0
popup/item_1/text = "Image"
popup/item_1/id = 1

[node name="SpinBox" type="SpinBox" parent="."]
visible = false
layout_mode = 2
tooltip_text = "Frame number to render. -1 Will render the current frame of the Blender image."
min_value = -1.0
value = -1.0

[node name="ImageOverride" type="OptionButton" parent="."]
visible = false
layout_mode = 2
tooltip_text = "Image format override."
item_count = 7
selected = 0
popup/item_0/text = "NA"
popup/item_0/id = 1
popup/item_1/text = "TGA"
popup/item_1/id = 0
popup/item_2/text = "RAWTGA"
popup/item_2/id = 2
popup/item_3/text = "JPEG"
popup/item_3/id = 3
popup/item_4/text = "PNG"
popup/item_4/id = 4
popup/item_5/text = "BMP"
popup/item_5/id = 5
popup/item_6/text = "*TIFF"
popup/item_6/id = 6

[node name="AnimOverride" type="OptionButton" parent="."]
layout_mode = 2
tooltip_text = "Animation format override."
item_count = 10
selected = 0
popup/item_0/text = "NA"
popup/item_0/id = 0
popup/item_1/text = "MP4"
popup/item_1/id = 3
popup/item_2/text = "MKV"
popup/item_2/id = 4
popup/item_3/text = "AVIRAW"
popup/item_3/id = 1
popup/item_4/text = "AVIJPEG"
popup/item_4/id = 2
popup/item_5/text = "FFMPEG"
popup/item_5/id = 6
popup/item_6/text = "PNG"
popup/item_6/id = 8
popup/item_7/text = "TGA"
popup/item_7/id = 7
popup/item_8/text = "JPEG"
popup/item_8/id = 9
popup/item_9/text = "*MPEG"
popup/item_9/id = 5

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Close" type="Button" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_vxkuw")
theme_override_styles/hover = SubResource("StyleBoxFlat_6wnug")
theme_override_styles/pressed = SubResource("StyleBoxFlat_blf1k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l4h1q")
text = "X"

[connection signal="text_changed" from="PathLine" to="." method="_on_path_line_text_changed"]
[connection signal="visibility_changed" from="PathLine/PanelContainer" to="PathLine/PanelContainer/SearchingLabel" method="_on_panel_container_visibility_changed"]
[connection signal="timeout" from="PathLine/PanelContainer/SearchingLabel/Timer" to="PathLine/PanelContainer/SearchingLabel" method="_on_timer_timeout"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
